--- a/Server/src/templates/verify-email.html
+++ b/Server/src/templates/verify-email.html
@@ -216,7 +216,7 @@
                                   <td style="line-height: 24px; font-size: 16px; margin: 0" align="left">
                                     <img
                                       class="w-24"
-                                      src="https://duthanhduoc.com/images/logo_big.png"
+                                      src="https://toeictesting247-ap-southeast-1.s3.ap-southeast-1.amazonaws.com/images/af4293c3bdd88003013641600.jpg"
                                       style="
                                         height: auto;
                                         line-height: 100%;
